# src/controllers/auth.controller.ts
@@ -22,7 +22,15 @@ const registerValidateSchema = Yup.object({
     fullname: Yup.string().required(),
     username: Yup.string().required(),
     email: Yup.string().required(),
-    password: Yup.string().required(),
+    password: Yup.string().required().min(6, "Password must be at least 6 characters").test('at-least-one-uppercase-letter', "Contains at least one uppercase letter", (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+    }).test('at-least-one-number', "Contains at least one uppercase letter", (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*\d)/;
+        return regex.test(value);
+    }),
     confirmPassword: Yup.string()
         .required()
         .oneOf([Yup.ref('password'), ""],  "Password not match"),
@@ -32,6 +40,10 @@ export default {
     async register(req: Request, res: Response) {
         /**
            #swagger.tags = ['Auth']
+            #swagger.requestBody = {
+            required: true,
+            schema: {$ref: "#/components/schemas/RegisterRequest"}
+        }
          */
         const { fullname, username, email, password, confirmPassword } = req.body as unknown as TRegister;
 
@@ -79,6 +91,7 @@ export default {
                         username: identifier,
                     },
                 ],
+                isActive: true,
             });
 
             if (!userByIdentifier) {
@@ -138,6 +151,41 @@ export default {
             res.status(400).json({
                 message: err.message,
                 data: null,
+            });
+        }
+    },
+
+    async activation(req: Request, res: Response) {
+
+        /**
+            #swagger.tags = ['Auth']
+            #swagger.requestBody = {
+                required: true,
+                schema: {$ref: '#/components/schemas/ActivationRequest'}
+            }
+         */
+        try {
+            const {code } = req.body as { code: string };
+            const user = await UserModel.findOneAndUpdate({
+                activationCode: code,
+            },
+            {
+                isActive: true,
+            },
+            {
+                new: true,
+            }
+        );
+
+        res.status(200).json({
+            message: "User successfully activated",
+            data: user,
+        });
+        } catch (error) {
+            const err = error as unknown as Error;
+            res.status(400).json({
+                message: err.message,
+                data: null, 
             });
         }
     },
